1998-09-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-app-helper.c (gnome_create_toolbar_with_data,
	gnome_create_toolbar_custom): New routines to reuse the toolbar
	creation code without having the toolbar be attached by default.

1998-08-28  Havoc Pennington  <hp@pobox.com>

	* gtklayout.c (gtk_layout_move): Fix infinite loop (add
	g_list_next on each iteration).

1998-08-25  Havoc Pennington  <hp@pobox.com>

	* gnome-canvas.h (gnome_canvas_item_set_valist): New function
	takes a va_list as argument.
	* gnome-canvas.c (gnome_canvas_item_set): Implement in terms of
	set_valist.

Wed Aug 26 00:50:27 1998  Tom Tromey  <tromey@cygnus.com>

	* gnome-app.c (gnome_app_reparent_handle_box): Declare to avoid
	warnings.

	* gnome-propertybox.c (gnome_property_box_init): Changed calls to
	reflect typo fix.
	* gnome-preferences.h: Declare
	gnome_preferences_get_property_box_apply,
	gnome_preferences_set_property_box_button_apply.
	* gnome-preferences.c (gnome_preferences_get_property_box_apply):
	Renamed to fix typo.

1998-08-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	Fixed a bug waiting to happen on my previous change: Specifically,
	UI-properties would have been the only victim (change of the style
	of a gnome-propertybox while using it).
	
	* gnome-propertybox.c (gnome_property_box_init): Implement support
	for OK/CANCEL/HELP vs OK/APPLY/CLOSE/HELP modes. 

	* gnome-preferences.c (gnome_preferences_load): Activate the code
	for the preference dialog box configuration.

1998-08-24  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcauldron.c (gtk_dialog_cauldron_parse): Use
	gtk_window_position on the created dialog box.

Mon Aug 24 22:51:50 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-socket.c (gtk_socket_realize): Use 
	gtk_widget_get_parent_window() to get the parent window.

Mon Aug 24 19:01:02 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-socket.c (gtk_socket_size_request/allocate): Don't
	need to assert that the widget->window != NULL.
